注册 用户后端填写

--- a/project/info/templates/news/index.html
+++ b/project/info/templates/news/index.html
@@ -172,6 +172,7 @@
                 <div class="error_tip">请勾选</div>
             </div>
             <input type="submit" name="" value="注 册" class="input_sub">
+            <div id="register-err" class="error_tip">密码不能为空</div>
             <div class="down_link">已有账号？<a href="javascript:;" class="to_login">立即登录</a></div>
         </div>
         <div class="mask"></div>
